# Web-Tauri

./: .gitignore  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_download.rs  http_server.rs  main.rs
